tests/paczka1/fuzzy1/95423327.err
Error in line 2: A03hnKdvt3a A465 5t,6
Error in line 3: A03hnKdv23a A465 156,2
Error in line 6: A03hnKdv23a S53 83,7
Error in line 15: A03hnKdv23a S163 41,4
Error in line 29: cy2AHUOhDnc S53 99,7
Error in line 34: cy2AHUOhDnc A644 58,7
